<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="maas.com.mx.maas.frmGenerales">


    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Datos generales"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:id="@+id/textView"
        android:layout_marginTop="20dp"
        android:textColor="#003D7A"
        android:textStyle="bold" />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        >
    <TableLayout android:id="@+id/Body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/fondo"
        android:layout_gravity="fill"
        android:clickable="true"
        android:focusableInTouchMode="true"
        android:onClick="hideSoftKeyboard"
        >
        <!--all here-->
        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/txtNombreSolicitanteGeneral"
            android:textColor="@drawable/output"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:maxLength="50"
            android:inputType="text"
            android:digits="0,1,2,3,4,5,6,7,8,9,qwertyuiopasdfghjklñzxcvbnmQWERTYUIOPASDFGHJKLÑZXCVBNMáéíóúÁÉÍÓÚ"
            android:hint="@string/lblNombreSolicitanteGeneral"/>

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/txtSegNombreGeneral"
            android:textColor="@drawable/output"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:maxLength="50"
            android:inputType="text"
            android:digits="0,1,2,3,4,5,6,7,8,9,qwertyuiopasdfghjklñzxcvbnmQWERTYUIOPASDFGHJKLÑZXCVBNMáéíóúÁÉÍÓÚ"
            android:hint="@string/lblSegNombreGeneral" />

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/txtPaternoGeneral"
            android:textColor="@drawable/output"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:maxLength="50"
            android:inputType="text"
            android:digits="0,1,2,3,4,5,6,7,8,9,qwertyuiopasdfghjklñzxcvbnmQWERTYUIOPASDFGHJKLÑZXCVBNMáéíóúÁÉÍÓÚ"
            android:hint="@string/lblPaternoGeneral"/>

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/txtMaternoGeneral"
            android:textColor="@drawable/output"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:maxLength="50"
            android:inputType="text"
            android:digits="0,1,2,3,4,5,6,7,8,9,qwertyuiopasdfghjklñzxcvbnmQWERTYUIOPASDFGHJKLÑZXCVBNMáéíóúÁÉÍÓÚ"
            android:hint="@string/lblMaternoGeneral"/>

        <Spinner
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/cboIdentificacionGeneral"
            android:textColor="@drawable/output"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:prompt="@string/tipoidentificacion"
            android:spinnerMode="dialog" />

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/txtNumIdentificacionGeneral"
            android:textColor="@drawable/output"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:maxLength="50"
            android:inputType="number"
            android:hint="@string/lblNumIdentificacionGeneral"/>

        <RadioGroup
                android:id="@+id/radioSex"
                android:layout_width="300dp"
                android:orientation="horizontal"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content" >

                <RadioButton
                    android:id="@+id/rdoRadioHombre"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:text="@string/HOMBRE"
                    android:hint="@string/HOMBRE" />
                <RadioButton
                    android:id="@+id/rdoRadioMujer"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:text="@string/MUJER" />
            </RadioGroup>

        <Spinner
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/cboNacionalGeneral"
            android:textColor="@drawable/output"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:prompt="@string/nacionalidad"
            android:spinnerMode="dialog" />

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/lblFechaNacimiento"
            android:id="@+id/lblFechaNacimiento"
            android:textColor="@drawable/negro"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:textAlignment="gravity"
            android:layout_marginTop="20dp"
            android:gravity="center" />

        <DatePicker
            android:id="@+id/dateFechaNacGeneralX"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp" />

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/txtRFCGeneral"
            android:textColor="@drawable/output"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="20dp"
            android:maxLength="14"
            android:inputType="text"
            android:digits="0,1,2,3,4,5,6,7,8,9,qwertyuiopasdfghjklñzxcvbnmQWERTYUIOPASDFGHJKLÑZXCVBNM-"
            android:hint="@string/lblRfcGral"/>

        <Spinner
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/cboEdoCivilGeneral"
            android:textColor="@drawable/output"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:prompt="@string/estadocivil"
            android:spinnerMode="dialog" />

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/txtNumDependienteGeneral"
            android:textColor="@drawable/output"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:inputType="number"
            android:maxLength="2"
            android:hint="@string/lblNoDependientes"/>

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/txtCalleDomicilio"
            android:textColor="@drawable/output"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:maxLength="50"
            android:inputType="text"
            android:digits="0,1,2,3,4,5,6,7,8,9,qwertyuiopasdfghjklñzxcvbnmQWERTYUIOPASDFGHJKLÑZXCVBNMáéíóúÁÉÍÓÚ"
            android:hint="@string/lblCalle"/>

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/txtNoInteriorDomicilio"
            android:textColor="@drawable/output"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:maxLength="50"
            android:inputType="text"
            android:digits="0,1,2,3,4,5,6,7,8,9,qwertyuiopasdfghjklñzxcvbnmQWERTYUIOPASDFGHJKLÑZXCVBNMáéíóúÁÉÍÓÚ"
            android:hint="@string/lblNoInt"/>

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/txtNoExteriorDomicilio"
            android:textColor="@drawable/output"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:maxLength="50"
            android:inputType="text"
            android:digits="0,1,2,3,4,5,6,7,8,9,qwertyuiopasdfghjklñzxcvbnmQWERTYUIOPASDFGHJKLÑZXCVBNMáéíóúÁÉÍÓÚ"
            android:hint="@string/lblNoExt"/>

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/txtCpDomicilio"
            android:textColor="@drawable/output"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:inputType="number"
            android:maxLength="5"
            android:hint="@string/lblCp"/>

        <Spinner
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/cboEstdoDomicilio"
            android:textColor="@drawable/output"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:prompt="@string/estado"
            android:spinnerMode="dialog"
            />

        <Spinner
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/cboDelegMunicipio"
            android:textColor="@drawable/output"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:prompt="@string/delegmunicipio"
            android:spinnerMode="dialog" />

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/txtColDomicilio"
            android:textColor="@drawable/output"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:maxLength="50"
            android:inputType="text"
            android:digits="0,1,2,3,4,5,6,7,8,9,qwertyuiopasdfghjklñzxcvbnmQWERTYUIOPASDFGHJKLÑZXCVBNMáéíóúÁÉÍÓÚ"
            android:hint="@string/lblColonia"/>

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/txtTiempoResidDomicilio"
            android:textColor="@drawable/output"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:inputType="number"
            android:maxLength="2"
            android:hint="@string/lblTiempoResidencia"/>

        <Spinner
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/cboEstatusResidenciaDomicilio"
            android:textColor="@drawable/output"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:prompt="@string/estatusResidenciaDom"
            android:spinnerMode="dialog" />

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/txtMontoViviendaDomicilio"
            android:textColor="@drawable/output"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:inputType="numberDecimal"
            android:maxLength="10"
            android:hint="@string/lblMontoVivienda"/>

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/txtECorreoDomicilio"
            android:textColor="@drawable/output"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:inputType="textEmailAddress"
            android:maxLength="50"
            android:hint="@string/lblECorreo"/>

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/txtTelDomicilio"
            android:textColor="@drawable/output"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:inputType="phone"
            android:maxLength="10"
            android:hint="@string/lbltelDomicilio"/>


        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/txtCelDomicilio"
            android:textColor="@drawable/output"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:inputType="phone"
            android:maxLength="10"
            android:hint="@string/lbltelDomicilio"/>

        <Spinner
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/cboCompaniaMovil"
            android:textColor="@drawable/output"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:prompt="@string/companiaMovil"
            android:spinnerMode="dialog" />



        <Space
            android:layout_width="300dp"
            android:layout_height="150dp" />


    </TableLayout>

    </ScrollView>

    <TableLayout android:id="@+id/Footer"
        android:layout_width="fill_parent"
        android:layout_marginTop="-45px"
        android:layout_height="30dp"
        android:background="@drawable/gray"
        />

</LinearLayout>
